--- a/SmackMyBitch.cabal
+++ b/SmackMyBitch.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 787c81087b3566619e221eb68cc4a31538179d02944701496a47dc12b5ec8047
+-- hash: 498ba96f55ebf832f464c33ad47208dc364db4949ed20c5bf0b8d4dd03859af2
 
 name:           SmackMyBitch
 version:        0.1.0.0
@@ -33,12 +33,14 @@ library
   hs-source-dirs:
       src
   build-depends:
-      aeson
-    , array
-    , base >=4.7 && <5
+      base >=4.7 && <5
+    , bytestring
     , http-client
     , http-client-tls
     , http-types
+    , load-env
+    , text
+    , utf8-string
   default-language: Haskell2010
 
 executable SmackMyBitch-exe
@@ -50,12 +52,14 @@ executable SmackMyBitch-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       SmackMyBitch
-    , aeson
-    , array
     , base >=4.7 && <5
+    , bytestring
     , http-client
     , http-client-tls
     , http-types
+    , load-env
+    , text
+    , utf8-string
   default-language: Haskell2010
 
 test-suite SmackMyBitch-test
@@ -68,10 +72,12 @@ test-suite SmackMyBitch-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       SmackMyBitch
-    , aeson
-    , array
     , base >=4.7 && <5
+    , bytestring
     , http-client
     , http-client-tls
     , http-types
+    , load-env
+    , text
+    , utf8-string
   default-language: Haskell2010
