--- a/package.yaml
+++ b/package.yaml
@@ -21,11 +21,13 @@ description:         Please see the README on GitHub at <https://github.com/Gith
 
 dependencies:
 - base >= 4.7 && < 5
-- aeson
 - http-client
 - http-types
 - http-client-tls
-- array
+- bytestring
+- utf8-string
+- text
+- load-env
 
 library:
   source-dirs: src
