--- a/SmackMyBitch.cabal
+++ b/SmackMyBitch.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 0694ba635507bdf6a999487ee51caaca500ca4b5a4582a2e21263835885b18da
+-- hash: eb3295ac41d8a1b599ea64c2fa36d90aef1e8d81c3111876d0c9fcd7e454f42a
 
 name:           SmackMyBitch
 version:        0.1.0.0
@@ -39,6 +39,7 @@ library
     , http-client-tls
     , http-types
     , load-env
+    , process
     , random
     , text
     , utf8-string
@@ -59,6 +60,7 @@ executable SmackMyBitch-exe
     , http-client-tls
     , http-types
     , load-env
+    , process
     , random
     , text
     , utf8-string
@@ -80,6 +82,7 @@ test-suite SmackMyBitch-test
     , http-client-tls
     , http-types
     , load-env
+    , process
     , random
     , text
     , utf8-string
